# Project/storage/api-docs/api-docs.json
@@ -130,6 +130,9 @@
                     },
                     "401": {
                         "description": "Invalid credentials"
+                    },
+                    "422": {
+                        "description": "Validation error"
                     }
                 },
                 "security": []
@@ -309,15 +312,16 @@
                     "201": {
                         "description": "Created"
                     },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
                     "403": {
                         "description": "No Permission"
+                    },
+                    "422": {
+                        "description": "Validation error"
                     }
-                },
-                "security": [
-                    {
-                        "sanctum": []
-                    }
-                ]
+                }
             }
         },
         "/api/products/{product}": {
